silver_trip_data done

--- a/Draft.ipynb
+++ b/Draft.ipynb
@@ -240,6 +240,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "90cc01a1-dfba-4b0b-b798-862fb820134c",
      "showTitle": false,
@@ -253,7 +254,6 @@
     "--first part of silver transformation (CTE inside A CTAS, distance and minutes calculations)\n",
     "CREATE TABLE silver_trip_data\n",
     "USING DELTA\n",
-    "CONSTRAINT silver_trip_data_pk PRIMARY KEY (ride_id)\n",
     "AS\n",
     "WITH T1 AS (\n",
     "    SELECT\n",
@@ -323,6 +323,26 @@
     "WHERE\n",
     "    T2.Trip_Distance_Km > 0.05\n",
     "    AND T2.Trip_Duration_Min IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "45c68af4-2d7d-4699-a61c-c7f4bee6721d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "ALTER TABLE silver_trip_data\n",
+    "ADD CONSTRAINT silver_trip_data_pk PRIMARY KEY (ride_id);"
    ]
   }
  ],
