--- a/03 - Transformation.ipynb
+++ b/03 - Transformation.ipynb
@@ -1,5 +1,127 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3a5c779e-8bde-452d-b5f7-64b95a4b2c42",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "--first part of silver transformation (CTE inside A CTAS, distance and minutes calculations)\n",
+    "CREATE TABLE silver_trip_data\n",
+    "USING DELTA\n",
+    "AS\n",
+    "WITH T1 AS (\n",
+    "    SELECT\n",
+    "        ride_id,\n",
+    "        rideable_type,\n",
+    "        member_casual,\n",
+    "        start_lat,\n",
+    "        start_lng,\n",
+    "        end_lat,\n",
+    "        end_lng,\n",
+    "        CAST(started_at AS TIMESTAMP) AS trip_start_ts,\n",
+    "        CAST(ended_at AS TIMESTAMP) AS trip_end_ts,\n",
+    "        COALESCE(start_station_name, 'UNKNOWN') AS start_station_name,\n",
+    "        COALESCE(start_station_id, 'N/A') AS start_station_id,\n",
+    "        COALESCE(end_station_name, 'UNKNOWN') AS end_station_name,\n",
+    "        COALESCE(end_station_id, 'N/A') AS end_station_id\n",
+    "    FROM\n",
+    "        divvy.default.bronze_trip_data\n",
+    "    WHERE \n",
+    "        _rescued_data IS NULL\n",
+    "        AND started_at IS NOT NULL\n",
+    "        AND ended_at IS NOT NULL\n",
+    "),\n",
+    "\n",
+    "Calculated AS (\n",
+    "    SELECT\n",
+    "        --Haversine Formula (The Haversine formula calculates the great-circle distance between two points on a sphere, given their latitudes and longitudes. It is commonly used in navigation and geospatial calculations.)\n",
+    "        --(https://en.wikipedia.org/wiki/Haversine_formula)\n",
+    "        *, \n",
+    "        CASE\n",
+    "            WHEN trip_end_ts > trip_start_ts\n",
+    "            THEN ROUND(TIMESTAMPDIFF(SECOND, trip_start_ts, trip_end_ts) / 60.0, 2)\n",
+    "            ELSE NULL\n",
+    "        END AS Trip_Duration_Min,\n",
+    "        ROUND(\n",
+    "            6371 * 2 * ASIN(\n",
+    "                SQRT(\n",
+    "                    POW(SIN(RADIANS(end_lat - start_lat) / 2), 2) +\n",
+    "                    COS(RADIANS(start_lat)) * COS(RADIANS(end_lat)) *\n",
+    "                    POW(SIN(RADIANS(end_lng - start_lng) / 2), 2)\n",
+    "                )\n",
+    "            ),\n",
+    "            2\n",
+    "        ) AS Trip_Distance_Km,\n",
+    "        CAST(trip_start_ts AS DATE) AS Full_Date\n",
+    "    FROM\n",
+    "        T1\n",
+    ")\n",
+    "\n",
+    "SELECT\n",
+    "    T2.ride_id,\n",
+    "    T2.rideable_type,\n",
+    "    T2.member_casual,\n",
+    "    T2.Full_Date,\n",
+    "    T2.start_station_id,\n",
+    "    T2.end_station_id,\n",
+    "    T2.Trip_Duration_Min,\n",
+    "    T2.Trip_Distance_Km,\n",
+    "    T2.start_lat,\n",
+    "    T2.start_lng,\n",
+    "    T2.end_lat,\n",
+    "    T2.end_lng,\n",
+    "    CAST(NULL AS STRING) AS start_community_area,\n",
+    "    CAST(NULL AS STRING) AS end_community_area\n",
+    "FROM\n",
+    "    Calculated AS T2\n",
+    "WHERE\n",
+    "    T2.Trip_Distance_Km > 0.05\n",
+    "    AND T2.Trip_Duration_Min IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "156339dd-62d3-4abb-b928-dcd24344b9f6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "ALTER TABLE silver_trip_data\n",
+    "ALTER COLUMN ride_id SET NOT NULL;\n",
+    "\n",
+    "ALTER TABLE silver_trip_data\n",
+    "ADD CONSTRAINT silver_trip_data_pk PRIMARY KEY (ride_id);"
+   ]
+  }
+ ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
    "computePreferences": null,
@@ -11,6 +133,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 4811261326724919,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "03 - Transformation",
