silver_trip_data (review) + Silver Weather Data

--- a/03 - Transformation.ipynb
+++ b/03 - Transformation.ipynb
@@ -49,8 +49,6 @@
     "\n",
     "Calculated AS (\n",
     "    SELECT\n",
-    "        --Haversine Formula (The Haversine formula calculates the great-circle distance between two points on a sphere, given their latitudes and longitudes. It is commonly used in navigation and geospatial calculations.)\n",
-    "        --(https://en.wikipedia.org/wiki/Haversine_formula)\n",
     "        *, \n",
     "        CASE\n",
     "            WHEN trip_end_ts > trip_start_ts\n",
@@ -73,6 +71,9 @@
     ")\n",
     "\n",
     "SELECT\n",
+    "    T2.trip_start_ts,\n",
+    "    T2.trip_end_ts,\n",
+    "    T2.start_station_name,\n",
     "    T2.ride_id,\n",
     "    T2.rideable_type,\n",
     "    T2.member_casual,\n",
@@ -114,11 +115,109 @@
    "outputs": [],
    "source": [
     "%sql\n",
+    "-- silver_trip_data_pk\n",
     "ALTER TABLE silver_trip_data\n",
     "ALTER COLUMN ride_id SET NOT NULL;\n",
     "\n",
     "ALTER TABLE silver_trip_data\n",
     "ADD CONSTRAINT silver_trip_data_pk PRIMARY KEY (ride_id);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1a0b1ece-1bbc-4f50-b5ea-91dc5526fbb5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- Silver Weather Data Transformation\n",
+    "\n",
+    "CREATE OR REPLACE TABLE silver_weather_data\n",
+    "USING DELTA\n",
+    "AS\n",
+    "SELECT\n",
+    "    to_timestamp(\n",
+    "        concat(\n",
+    "            CAST(YEAR AS STRING), '-',\n",
+    "            lpad(CAST(MO AS STRING), 2, '0'), '-',\n",
+    "            lpad(CAST(DY AS STRING), 2, '0'), ' ',\n",
+    "            lpad(CAST(HR AS STRING), 2, '0'), ':00:00' \n",
+    "        ),\n",
+    "        'yyyy-MM-dd HH:mm:ss'\n",
+    "    ) AS weather_ts,\n",
+    "    \n",
+    "    sha2(\n",
+    "        concat(YEAR, MO, DY, HR),\n",
+    "        256\n",
+    "    ) AS silver_weather_data_pk,\n",
+    "\n",
+    "    -- Measurement Casting (STRING to DOUBLE)\n",
+    "    CAST(TEMP AS DOUBLE) AS temp_celsius,\n",
+    "    CAST(PRCP AS DOUBLE) AS prcp_mm,\n",
+    "    CAST(HMDT AS DOUBLE) AS hmdt_percent,\n",
+    "    CAST(WND_SPD AS DOUBLE) AS wnd_spd_kph,\n",
+    "    CAST(ATM_PRESS AS DOUBLE) AS atm_press_hpa,\n",
+    "    CAST(\n",
+    "        to_date(\n",
+    "            concat(\n",
+    "                CAST(YEAR AS STRING), '-',\n",
+    "                lpad(CAST(MO AS STRING), 2, '0'), '-',\n",
+    "                lpad(CAST(DY AS STRING), 2, '0')\n",
+    "            ),\n",
+    "            'yyyy-MM-dd'\n",
+    "        ) AS INT\n",
+    "    ) AS Date_Key\n",
+    "    \n",
+    "FROM\n",
+    "    divvy.default.bronze_weather_data\n",
+    "    \n",
+    "WHERE\n",
+    "    _rescued_data IS NULL         \n",
+    "    AND YEAR IS NOT NULL           \n",
+    "    AND TEMP IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ae69096c-3fcc-4bdd-8947-8348b27f4be4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- Primary Key for silver_weather_data (Using the generated HASH key)\n",
+    "\n",
+    "ALTER TABLE silver_weather_data\n",
+    "ALTER COLUMN silver_weather_data_pk SET NOT NULL;\n",
+    "\n",
+    "ALTER TABLE silver_weather_data\n",
+    "ADD CONSTRAINT silver_weather_data_pk PRIMARY KEY (silver_weather_data_pk)\n",
+    "NOT ENFORCED;"
    ]
   }
  ],
@@ -134,7 +233,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4811261326724919,
+     "commandId": 7417539443675250,
      "dataframes": [
       "_sqldf"
      ]
