--- a/Draft.ipynb
+++ b/Draft.ipynb
@@ -331,6 +331,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "45c68af4-2d7d-4699-a61c-c7f4bee6721d",
      "showTitle": false,
@@ -341,9 +342,112 @@
    "outputs": [],
    "source": [
     "%sql\n",
+    "-- silver trip data pk\n",
     "ALTER TABLE silver_trip_data\n",
     "ADD CONSTRAINT silver_trip_data_pk PRIMARY KEY (ride_id);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "023d8a69-0f1d-44d6-8b9d-b3a8f4715ebb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- Step 03: Silver Weather Data Transformation (CTAS)\n",
+    "\n",
+    "CREATE OR REPLACE TABLE silver_weather_data\n",
+    "USING DELTA\n",
+    "AS\n",
+    "SELECT\n",
+    "    to_timestamp(\n",
+    "        concat(\n",
+    "            CAST(YEAR AS STRING), '-',\n",
+    "            lpad(CAST(MO AS STRING), 2, '0'), '-',\n",
+    "            lpad(CAST(DY AS STRING), 2, '0'), ' ',\n",
+    "            lpad(CAST(HR AS STRING), 2, '0'), ':00:00' \n",
+    "        ),\n",
+    "        'yyyy-MM-dd HH:mm:ss'\n",
+    "    ) AS weather_ts,\n",
+    "    \n",
+    "    sha2(\n",
+    "        concat(YEAR, MO, DY, HR),\n",
+    "        256\n",
+    "    ) AS silver_weather_data_pk,\n",
+    "\n",
+    "    -- Measurement Casting (STRING to DOUBLE)\n",
+    "    CAST(TEMP AS DOUBLE) AS temp_celsius,\n",
+    "    CAST(PRCP AS DOUBLE) AS prcp_mm,\n",
+    "    CAST(HMDT AS DOUBLE) AS hmdt_percent,\n",
+    "    CAST(WND_SPD AS DOUBLE) AS wnd_spd_kph,\n",
+    "    CAST(ATM_PRESS AS DOUBLE) AS atm_press_hpa,\n",
+    "    CAST(\n",
+    "        to_date(\n",
+    "            concat(\n",
+    "                CAST(YEAR AS STRING), '-',\n",
+    "                lpad(CAST(MO AS STRING), 2, '0'), '-',\n",
+    "                lpad(CAST(DY AS STRING), 2, '0')\n",
+    "            ),\n",
+    "            'yyyy-MM-dd'\n",
+    "        ) AS INT\n",
+    "    ) AS Date_Key\n",
+    "    \n",
+    "FROM\n",
+    "    divvy.default.bronze_weather_data\n",
+    "    \n",
+    "WHERE\n",
+    "    _rescued_data IS NULL         \n",
+    "    AND YEAR IS NOT NULL           \n",
+    "    AND TEMP IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "77b0e4f1-1276-498f-873c-805d87e7f3b8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLe divvy.default.silver_trip_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "cb7cc36e-355e-4b93-88ab-47db1ea4ff6e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -358,7 +462,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7215048650100018,
+     "commandId": 7417539443675248,
      "dataframes": [
       "_sqldf"
      ]
