Silver Weather update + fact trip table draft

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -300,6 +300,51 @@
     "  CONSTRAINT pk_Weather_Key PRIMARY KEY (Weather_Key)\n",
     ");"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "1d2e1e57-3172-45c8-8e58-5b1a68f7231b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- fact trip table\n",
+    "CREATE OR REPLACE TABLE divvy.default.FACT_trip AS\n",
+    "SELECT\n",
+    "    t.ride_id,\n",
+    "    t.Trip_Distance_Km,\n",
+    "    t.Trip_Duration_Min,\n",
+    "    t.Full_Date,\n",
+    "    d.Date_Key,\n",
+    "    s.Station_Key,\n",
+    "    r.Rider_key,\n",
+    "    w.weather_ts,\n",
+    "    dh.dim_date_hour_pk\n",
+    "FROM divvy.default.silver_trip_data AS t\n",
+    "LEFT JOIN divvy.default.DIM_Date_day AS d\n",
+    "    ON t.Full_Date = d.Full_Date\n",
+    "LEFT JOIN divvy.default.Dim_Station AS  s\n",
+    "    ON t.start_station_id = s.Station_Key\n",
+    "LEFT JOIN divvy.default.Dim_Rider AS  r\n",
+    "    ON t.rideable_type = r.Bike_Type\n",
+    "LEFT JOIN divvy.default.silver_weather_data AS  w\n",
+    "    ON t.trip_start_ts=w.weather_ts\n",
+    "LEFT JOIN divvy.default.DIM_Date_hour AS  dh\n",
+    "    ON d.Date_Key = dh.Date_Key\n",
+    "    AND hour(t.trip_start_ts) = dh.Hour\n",
+    "    AND minute(t.trip_start_ts) - (minute(t.trip_start_ts) % 15) = dh.MinuteBucket\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
