--- a/03 - Transformation.ipynb
+++ b/03 - Transformation.ipynb
@@ -159,25 +159,18 @@
     "        'yyyy-MM-dd HH:mm:ss'\n",
     "    ) AS weather_ts,\n",
     "    \n",
-    "    sha2(\n",
-    "        concat(YEAR, MO, DY, HR),\n",
-    "        256\n",
-    "    ) AS silver_weather_data_pk,\n",
+    "    concat(YEAR, lpad(MO, 2, '0'), lpad(DY, 2, '0'), lpad(HR, 2, '0')) AS silver_weather_data_pk,\n",
     "\n",
-    "    -- Measurement Casting (STRING to DOUBLE)\n",
     "    CAST(TEMP AS DOUBLE) AS temp_celsius,\n",
     "    CAST(PRCP AS DOUBLE) AS prcp_mm,\n",
     "    CAST(HMDT AS DOUBLE) AS hmdt_percent,\n",
     "    CAST(WND_SPD AS DOUBLE) AS wnd_spd_kph,\n",
     "    CAST(ATM_PRESS AS DOUBLE) AS atm_press_hpa,\n",
     "    CAST(\n",
-    "        to_date(\n",
-    "            concat(\n",
-    "                CAST(YEAR AS STRING), '-',\n",
-    "                lpad(CAST(MO AS STRING), 2, '0'), '-',\n",
-    "                lpad(CAST(DY AS STRING), 2, '0')\n",
-    "            ),\n",
-    "            'yyyy-MM-dd'\n",
+    "        concat(\n",
+    "            CAST(YEAR AS STRING),\n",
+    "            lpad(CAST(MO AS STRING), 2, '0'),\n",
+    "            lpad(CAST(DY AS STRING), 2, '0')\n",
     "        ) AS INT\n",
     "    ) AS Date_Key\n",
     "    \n",
@@ -185,10 +178,26 @@
     "    divvy.default.bronze_weather_data\n",
     "    \n",
     "WHERE\n",
-    "    _rescued_data IS NULL         \n",
+    "    _rescued_data IS NULL   \n",
     "    AND YEAR IS NOT NULL           \n",
-    "    AND TEMP IS NOT NULL;"
+    "    AND TEMP IS NOT NULL"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f008654a-f94c-42e2-b000-2f41361037ec",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -210,7 +219,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- Primary Key for silver_weather_data (Using the generated HASH key)\n",
+    "-- silver_weather_data_pk\n",
     "\n",
     "ALTER TABLE silver_weather_data\n",
     "ALTER COLUMN silver_weather_data_pk SET NOT NULL;\n",
