--- a/Draft.ipynb
+++ b/Draft.ipynb
@@ -352,6 +352,29 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4020ed6e-2e12-4dbb-a148-1e0951bed16f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLE silver_weather_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "023d8a69-0f1d-44d6-8b9d-b3a8f4715ebb",
@@ -462,7 +485,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7417539443675248,
+     "commandId": 8959780040606264,
      "dataframes": [
       "_sqldf"
      ]
