GEOLOCALISATION strategy change (H3) testing phase

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -227,11 +227,9 @@
     "-- DIM Station\n",
     "\n",
     "CREATE TABLE Dim_Station (\n",
-    "  Station_Key STRING,\n",
+    "  Station_Key BIGINT GENERATED ALWAYS AS IDENTITY,\n",
     "  Station_Name STRING,\n",
     "  Latitude_Longitude DOUBLE,\n",
-    "  City STRING,\n",
-    "  Community_Area STRING,\n",
     "  CONSTRAINT pk_Station_Key PRIMARY KEY (Station_Key)\n",
     ");"
    ]
@@ -306,7 +304,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1d2e1e57-3172-45c8-8e58-5b1a68f7231b",
      "showTitle": false,
@@ -345,6 +347,45 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "94fb5b46-3747-490a-9527-b73fb7f06859",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLE fact_trip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b003d94f-b6ea-42c4-8b93-d8302c482c15",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -359,7 +400,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5444801716230499,
+     "commandId": 5348849239543073,
      "dataframes": [
       "_sqldf"
      ]
