--- a/Drafts.ipynb
+++ b/Drafts.ipynb
@@ -352,30 +352,8 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "4020ed6e-2e12-4dbb-a148-1e0951bed16f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "DROP TABLE silver_weather_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "023d8a69-0f1d-44d6-8b9d-b3a8f4715ebb",
      "showTitle": false,
@@ -386,7 +364,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- Step 03: Silver Weather Data Transformation (CTAS)\n",
+    "-- Silver Weather Data Transformation\n",
     "\n",
     "CREATE OR REPLACE TABLE silver_weather_data\n",
     "USING DELTA\n",
@@ -402,25 +380,18 @@
     "        'yyyy-MM-dd HH:mm:ss'\n",
     "    ) AS weather_ts,\n",
     "    \n",
-    "    sha2(\n",
-    "        concat(YEAR, MO, DY, HR),\n",
-    "        256\n",
-    "    ) AS silver_weather_data_pk,\n",
+    "    concat(YEAR, lpad(MO, 2, '0'), lpad(DY, 2, '0'), lpad(HR, 2, '0')) AS silver_weather_data_pk,\n",
     "\n",
-    "    -- Measurement Casting (STRING to DOUBLE)\n",
     "    CAST(TEMP AS DOUBLE) AS temp_celsius,\n",
     "    CAST(PRCP AS DOUBLE) AS prcp_mm,\n",
     "    CAST(HMDT AS DOUBLE) AS hmdt_percent,\n",
     "    CAST(WND_SPD AS DOUBLE) AS wnd_spd_kph,\n",
     "    CAST(ATM_PRESS AS DOUBLE) AS atm_press_hpa,\n",
     "    CAST(\n",
-    "        to_date(\n",
-    "            concat(\n",
-    "                CAST(YEAR AS STRING), '-',\n",
-    "                lpad(CAST(MO AS STRING), 2, '0'), '-',\n",
-    "                lpad(CAST(DY AS STRING), 2, '0')\n",
-    "            ),\n",
-    "            'yyyy-MM-dd'\n",
+    "        concat(\n",
+    "            CAST(YEAR AS STRING),\n",
+    "            lpad(CAST(MO AS STRING), 2, '0'),\n",
+    "            lpad(CAST(DY AS STRING), 2, '0')\n",
     "        ) AS INT\n",
     "    ) AS Date_Key\n",
     "    \n",
@@ -428,9 +399,9 @@
     "    divvy.default.bronze_weather_data\n",
     "    \n",
     "WHERE\n",
-    "    _rescued_data IS NULL         \n",
+    "    _rescued_data IS NULL   \n",
     "    AND YEAR IS NOT NULL           \n",
-    "    AND TEMP IS NOT NULL;"
+    "    AND TEMP IS NOT NULL"
    ]
   },
   {
@@ -444,7 +415,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "77b0e4f1-1276-498f-873c-805d87e7f3b8",
+     "nuid": "89ee4d45-6114-4856-af64-857392417edb",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -453,7 +424,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "DROP TABLe divvy.default.silver_trip_data"
+    "DROP TABLE bronze_geo_data;"
    ]
   },
   {
@@ -461,16 +432,24 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "cb7cc36e-355e-4b93-88ab-47db1ea4ff6e",
+     "nuid": "4c9abb70-ccfc-44cc-a944-ca60011e9eb9",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql\n",
+    "-- H3 GEOLOCALISATION TEST\n",
+    "SELECT h3_polyfillash3('POLYGON((-87.7 41.8, -87.6 41.8, -87.6 41.9, -87.7 41.9, -87.7 41.8))', 9)"
+   ]
   }
  ],
  "metadata": {
@@ -485,14 +464,14 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8959780040606264,
+     "commandId": 5348849239543051,
      "dataframes": [
       "_sqldf"
      ]
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "Draft",
+   "notebookName": "Drafts",
    "widgets": {}
   },
   "language_info": {
