Testing phase : geospatial enrichment

--- a/Drafts.ipynb
+++ b/Drafts.ipynb
@@ -415,29 +415,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "89ee4d45-6114-4856-af64-857392417edb",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "DROP TABLE bronze_geo_data;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "4c9abb70-ccfc-44cc-a944-ca60011e9eb9",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -449,6 +426,96 @@
     "%sql\n",
     "-- H3 GEOLOCALISATION TEST\n",
     "SELECT h3_polyfillash3('POLYGON((-87.7 41.8, -87.6 41.8, -87.6 41.9, -87.7 41.9, -87.7 41.8))', 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "591f9914-a770-4121-b70d-19343a00c8d8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- %sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE dim_neighborhood_h3_map\n",
+    "USING DELTA\n",
+    "AS\n",
+    "SELECT\n",
+    "  explode(h3_polyfillash3(ST_AsText(geom_wkt), 10)) AS h3_index_10,\n",
+    "  community AS Neighborhood_Name\n",
+    "FROM \n",
+    "  bronze_neighborhoods; \n",
+    "OPTIMIZE dim_neighborhood_h3_map\n",
+    "ZORDER BY (h3_index_10);\n",
+    "\n",
+    "SELECT * FROM dim_neighborhood_h3_map LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "21daff9a-63e9-48ab-bfd5-fda4de71ee5a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- %sql\n",
+    "\n",
+    "CREATE OR REPLACE TABLE gold.Dim_Station_Final\n",
+    "USING DELTA\n",
+    "AS\n",
+    "WITH all_unique_stations AS (\n",
+    "  SELECT DISTINCT\n",
+    "    start_station_name AS Station_Name,\n",
+    "    start_lat AS Latitude,\n",
+    "    start_lng AS Longitude\n",
+    "  FROM bronze_trip_data\n",
+    "  WHERE start_lat IS NOT NULL AND start_lng IS NOT NULL\n",
+    "\n",
+    "  UNION\n",
+    "\n",
+    "  SELECT DISTINCT\n",
+    "    end_station_name AS Station_Name,\n",
+    "    end_lat AS Latitude,\n",
+    "    end_lng AS Longitude\n",
+    "  FROM bronze_trip_data\n",
+    "  WHERE end_lat IS NOT NULL AND end_lng IS NOT NULL\n",
+    ")\n",
+    "SELECT\n",
+    "  h3_longlatash3(s.Longitude, s.Latitude, 10) AS h3_index_10,\n",
+    "  s.Station_Name,\n",
+    "  s.Latitude,\n",
+    "  s.Longitude,\n",
+    "  m.Neighborhood_Name,\n",
+    "  CASE WHEN m.Neighborhood_Name IS NOT NULL THEN TRUE ELSE FALSE END AS is_in_community_area\n",
+    "FROM\n",
+    "  all_unique_stations s\n",
+    "LEFT JOIN\n",
+    "  dim_neighborhood_h3_map m\n",
+    "ON\n",
+    "  h3_longlatash3(s.Longitude, s.Latitude, 10) = m.h3_index_10;\n",
+    "\n",
+    "OPTIMIZE gold.Dim_Station_Final\n",
+    "ZORDER BY (h3_index_10);\n",
+    "\n",
+    "SELECT * FROM gold.Dim_Station_Final WHERE Neighborhood_Name IS NOT NULL LIMIT 5;"
    ]
   }
  ],
@@ -464,7 +531,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5348849239543051,
+     "commandId": 5348849239543362,
      "dataframes": [
       "_sqldf"
      ]
