Round (lat,long) & insertions phase (dim rider, dim station)

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -215,6 +215,29 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "7baf7ea2-a4a4-473f-afc3-2ec9c6fcc946",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLE dim_station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "a14ce24a-5d77-4441-a8fe-93a506d4d76f",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -229,7 +252,8 @@
     "CREATE TABLE Dim_Station (\n",
     "  Station_Key BIGINT GENERATED ALWAYS AS IDENTITY,\n",
     "  Station_Name STRING,\n",
-    "  Latitude_Longitude DOUBLE,\n",
+    "  Latitude DOUBLE,\n",
+    "  Longitude DOUBLE,\n",
     "  CONSTRAINT pk_Station_Key PRIMARY KEY (Station_Key)\n",
     ");"
    ]
@@ -254,10 +278,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- DIM Rider\n",
-    "\n",
     "CREATE TABLE Dim_Rider (\n",
-    "  Rider_key STRING,\n",
+    "  Rider_key BIGINT GENERATED ALWAYS AS IDENTITY,\n",
     "  Bike_Type STRING,\n",
     "  CONSTRAINT pk_Rider_key PRIMARY KEY (Rider_key)\n",
     ");"
@@ -400,7 +422,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5348849239543073,
+     "commandId": 5444801716230498,
      "dataframes": [
       "_sqldf"
      ]
