--- a/03 - Transformation.ipynb
+++ b/03 - Transformation.ipynb
@@ -97,6 +97,7 @@
     "    T2.trip_start_ts,\n",
     "    T2.trip_end_ts,\n",
     "    T2.start_station_name,\n",
+    "    T2.end_station_name,\n",
     "    T2.ride_id,\n",
     "    T2.rideable_type,\n",
     "    T2.member_casual,\n",
@@ -114,6 +115,43 @@
     "WHERE\n",
     "    T2.Trip_Distance_Km > 0.05\n",
     "    AND T2.Trip_Duration_Min IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dc0a56a0-8853-49fc-b7ec-21fc3b561868",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- second part of silver transformation --> silver trip data lat and longitude\n",
+    "\n",
+    "UPDATE divvy.default.silver_trip_data\n",
+    "SET\n",
+    "    start_lat = ROUND(start_lat, 2), \n",
+    "    start_lng = ROUND(start_lng, 2), \n",
+    "    end_lat = ROUND(end_lat, 2), \n",
+    "    end_lng = ROUND(end_lng, 2)\n",
+    "WHERE\n",
+    "    -- Only update rows that haven't been rounded yet \n",
+    "    \n",
+    "    CAST(start_lat AS DECIMAL(18, 5)) != ROUND(start_lat, 2)\n",
+    "    OR CAST(start_lng AS DECIMAL(18, 5)) != ROUND(start_lng, 2)\n",
+    "    OR CAST(end_lat AS DECIMAL(18, 5)) != ROUND(end_lat, 2)\n",
+    "    OR CAST(end_lng AS DECIMAL(18, 5)) != ROUND(end_lng, 2);"
    ]
   },
   {
@@ -247,7 +285,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5348849239543364,
+     "commandId": 8635953509972500,
      "dataframes": [
       "_sqldf"
      ]
