--- a/Drafts.ipynb
+++ b/Drafts.ipynb
@@ -414,6 +414,7 @@
       "implicitDf": true,
       "rowLimit": 10000
      },
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "4c9abb70-ccfc-44cc-a944-ca60011e9eb9",
      "showTitle": false,
@@ -434,6 +435,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "591f9914-a770-4121-b70d-19343a00c8d8",
      "showTitle": false,
@@ -444,7 +446,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- %sql\n",
+    "--  H3 GEOLOCALISATION TEST\n",
     "\n",
     "CREATE OR REPLACE TABLE dim_neighborhood_h3_map\n",
     "USING DELTA\n",
@@ -466,6 +468,7 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "21daff9a-63e9-48ab-bfd5-fda4de71ee5a",
      "showTitle": false,
@@ -476,7 +479,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "-- %sql\n",
+    "--  H3 GEOLOCALISATION TEST\n",
     "\n",
     "CREATE OR REPLACE TABLE gold.Dim_Station_Final\n",
     "USING DELTA\n",
@@ -517,6 +520,45 @@
     "\n",
     "SELECT * FROM gold.Dim_Station_Final WHERE Neighborhood_Name IS NOT NULL LIMIT 5;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7f8a4881-b59d-4c66-b862-b6dbce26a656",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLE silver_trip_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ba6bfc0c-e4ff-4282-af32-2bd445f0c84a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -531,7 +573,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5348849239543362,
+     "commandId": 8635953509972484,
      "dataframes": [
       "_sqldf"
      ]
