--- a/04 - Insertion.ipynb
+++ b/04 - Insertion.ipynb
@@ -5,7 +5,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9709d84d-89f8-41f7-b221-12b89d77f988",
      "showTitle": false,
@@ -14,7 +18,51 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql\n",
+    "-- dim rider insertion\n",
+    "INSERT INTO dim_rider (Bike_Type)\n",
+    "SELECT rideable_type FROM silver_trip_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4f893382-1202-49fb-977b-a75a1cdcbc71",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- dim station insertion\n",
+    "INSERT INTO dim_station (Station_Name, Latitude, Longitude)\n",
+    "SELECT DISTINCT \n",
+    "    start_station_name, \n",
+    "    start_lat, \n",
+    "    start_lng\n",
+    "FROM silver_trip_data\n",
+    "WHERE start_station_name IS NOT NULL AND start_lat IS NOT NULL AND start_lng IS NOT NULL\n",
+    "\n",
+    "UNION\n",
+    "\n",
+    "SELECT DISTINCT \n",
+    "    end_station_name, \n",
+    "    end_lat, \n",
+    "    end_lng\n",
+    "FROM silver_trip_data\n",
+    "WHERE end_station_name IS NOT NULL AND end_lat IS NOT NULL AND end_lng IS NOT NULL;"
+   ]
   }
  ],
  "metadata": {
@@ -28,6 +76,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 8635953509972485,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "04 - Insertion",
