dim weather insertion done

--- a/02 - Creation.ipynb
+++ b/02 - Creation.ipynb
@@ -307,18 +307,19 @@
     "%sql\n",
     "-- DIM Weather\n",
     "\n",
-    "CREATE TABLE Dim_Weather(\n",
-    "  Weather_Key STRING,\n",
-    "  Temp_type_text STRING,\n",
-    "  Temp_type_bin DOUBLE,\n",
-    "  Humidity_categories_text STRING,\n",
-    "  Humidity_categories_bin DOUBLE,\n",
-    "  Precipitation_types_text STRING,\n",
-    "  Precipitation_types_bin DOUBLE,\n",
-    "  Wind_type_categories_text STRING,\n",
-    "  Wind_type_categories_bin DOUBLE,\n",
-    "  CONSTRAINT pk_Weather_Key PRIMARY KEY (Weather_Key)\n",
-    ");"
+    "CREATE OR REPLACE TABLE dim_weather (\n",
+    "    Weather_Key                 TIMESTAMP, \n",
+    "    Temp_type_text              STRING,\n",
+    "    Temp_type_bin               DOUBLE,\n",
+    "    Humidity_categories_text    STRING,\n",
+    "    Humidity_categories_bin     DOUBLE,\n",
+    "    Precipitation_types_text    STRING,\n",
+    "    Precipitation_types_bin     DOUBLE,\n",
+    "    Wind_type_categories_text   STRING,\n",
+    "    Wind_type_categories_bin    DOUBLE,\n",
+    "    PRIMARY KEY (Weather_Key) NOT ENFORCED\n",
+    ")\n",
+    "USING DELTA;"
    ]
   },
   {
@@ -422,7 +423,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5444801716230498,
+     "commandId": 5444801716230499,
      "dataframes": [
       "_sqldf"
      ]
