--- a/04 - Insertion.ipynb
+++ b/04 - Insertion.ipynb
@@ -63,6 +63,141 @@
     "FROM silver_trip_data\n",
     "WHERE end_station_name IS NOT NULL AND end_lat IS NOT NULL AND end_lng IS NOT NULL;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1245b6ba-be3d-45d3-bb55-10fe539e7faa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- staging for dim weather (bin, text) \n",
+    "\n",
+    "CREATE OR REPLACE TEMPORARY VIEW staging_dim_weather AS\n",
+    "SELECT\n",
+    "    weather_ts, --natural key\n",
+    "    -- Temp Cat\n",
+    "    CASE\n",
+    "        WHEN temp_celsius <= 0 THEN 'Freezing'\n",
+    "        WHEN temp_celsius > 0 AND temp_celsius <= 10 THEN 'Cold'\n",
+    "        WHEN temp_celsius > 10 AND temp_celsius <= 20 THEN 'Cool'\n",
+    "        WHEN temp_celsius > 20 AND temp_celsius <= 30 THEN 'Warm'\n",
+    "        ELSE 'Hot'\n",
+    "    END AS Temp_type_text,\n",
+    "    \n",
+    "    CASE\n",
+    "        WHEN temp_celsius <= 0 THEN 10\n",
+    "        WHEN temp_celsius > 0 AND temp_celsius <= 10 THEN 20\n",
+    "        WHEN temp_celsius > 10 AND temp_celsius <= 20 THEN 30\n",
+    "        WHEN temp_celsius > 20 AND temp_celsius <= 30 THEN 40\n",
+    "        ELSE 50\n",
+    "    END AS Temp_type_bin, -- Bin code (e.g., 10, 20, 30...)\n",
+    "    \n",
+    "    -- Humidity Cat\n",
+    "    CASE\n",
+    "        WHEN hmdt_percent < 30 THEN 'Low'\n",
+    "        WHEN hmdt_percent >= 30 AND hmdt_percent <= 70 THEN 'Moderate'\n",
+    "        ELSE 'High'\n",
+    "    END AS Humidity_categories_text,\n",
+    "    \n",
+    "    CASE\n",
+    "        WHEN hmdt_percent < 30 THEN 1\n",
+    "        WHEN hmdt_percent >= 30 AND hmdt_percent <= 70 THEN 2\n",
+    "        ELSE 3\n",
+    "    END AS Humidity_categories_bin,\n",
+    "    \n",
+    "    -- Precipitation Cat\n",
+    "    CASE\n",
+    "        WHEN prcp_mm = 0 THEN 'None'\n",
+    "        WHEN prcp_mm > 0 AND prcp_mm <= 5 THEN 'Light Rain'\n",
+    "        WHEN prcp_mm > 5 AND prcp_mm <= 20 THEN 'Moderate Rain'\n",
+    "        ELSE 'Heavy Rain'\n",
+    "    END AS Precipitation_types_text,\n",
+    "    \n",
+    "    CASE\n",
+    "        WHEN prcp_mm = 0 THEN 1\n",
+    "        WHEN prcp_mm > 0 AND prcp_mm <= 5 THEN 2\n",
+    "        WHEN prcp_mm > 5 AND prcp_mm <= 20 THEN 3\n",
+    "        ELSE 4\n",
+    "    END AS Precipitation_types_bin,\n",
+    "    \n",
+    "    -- Wind Speed Cat\n",
+    "    CASE\n",
+    "        WHEN wnd_spd_kph <= 5 THEN 'Calm'\n",
+    "        WHEN wnd_spd_kph > 5 AND wnd_spd_kph <= 20 THEN 'Breezy'\n",
+    "        ELSE 'Windy'\n",
+    "    END AS Wind_type_categories_text,\n",
+    "    \n",
+    "    CASE\n",
+    "        WHEN wnd_spd_kph <= 5 THEN 1\n",
+    "        WHEN wnd_spd_kph > 5 AND wnd_spd_kph <= 20 THEN 2\n",
+    "        ELSE 3\n",
+    "    END AS Wind_type_categories_bin\n",
+    "    \n",
+    "FROM\n",
+    "    divvy.default.silver_weather_data\n",
+    "WHERE\n",
+    "    temp_celsius IS NOT NULL AND hmdt_percent IS NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3c9de32a-1705-41c1-8f7c-cb72029aa6fc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- dim weather insertion\n",
+    "INSERT INTO dim_weather (\n",
+    "  Weather_Key,\n",
+    "  Temp_type_text,\n",
+    "  Temp_type_bin,\n",
+    "  Humidity_categories_text,\n",
+    "  Humidity_categories_bin,\n",
+    "  Precipitation_types_text,\n",
+    "  Precipitation_types_bin,\n",
+    "  Wind_type_categories_text,\n",
+    "  Wind_type_categories_bin\n",
+    ")\n",
+    "SELECT\n",
+    "  weather_ts,\n",
+    "  Temp_type_text,\n",
+    "  Temp_type_bin,\n",
+    "  Humidity_categories_text,\n",
+    "  Humidity_categories_bin,\n",
+    "  Precipitation_types_text,\n",
+    "  Precipitation_types_bin,\n",
+    "  Wind_type_categories_text,\n",
+    "  Wind_type_categories_bin\n",
+    "FROM\n",
+    "staging_dim_weather;"
+   ]
   }
  ],
  "metadata": {
@@ -77,7 +212,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8635953509972485,
+     "commandId": 8635953509972505,
      "dataframes": [
       "_sqldf"
      ]
